# ristretto

./: .gitignore  CHANGELOG.md  Cargo.toml  Cross.toml  README.md  SECURITY.md  deny.toml  dist-workspace.toml  index.html  oranda-workspace.json  release-plz.toml
examples/class_loader/: Cargo.toml
examples/class_loader/src/: main.rs
examples/embedded_jvm/: Cargo.toml
examples/embedded_jvm/src/: main.rs
examples/runtime_class_loader/: Cargo.toml
examples/runtime_class_loader/src/: main.rs
examples/sound_midi/: Cargo.toml  PlayMidi.java  README.md
examples/sound_midi/src/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: constant_pool_from_bytes.rs  field_type_parse.rs  method_access_flags_from_bytes.rs  method_from_bytes.rs  reference_kind_from_bytes.rs
fuzz/fuzz_targets/classfile/: base_type_parse.rs  class_access_flags_from_bytes.rs  class_file_from_bytes.rs  constant_from_bytes.rs  constant_pool_from_bytes.rs  field_access_flags_from_bytes.rs  field_from_bytes.rs  method_access_flags_from_bytes.rs  method_from_bytes.rs  mutf8_from_bytes.rs  mutf8_to_bytes.rs  reference_kind_from_bytes.rs  version_from_bytes.rs
ristretto_classfile/: Cargo.toml  README.md
ristretto_classfile/benches/: class_file.rs  classfile.rs  mutf8.rs
ristretto_classfile/classes/: Annotations.java  Constants.java  Expressions.java  Simple.java  compile.sh
ristretto_classfile/src/: base_type.rs  byte_reader.rs  class_access_flags.rs  class_file.rs  constant.rs  constant_pool.rs  display.rs  error.rs  field.rs  field_access_flags.rs  field_type.rs  java_string.rs  lib.rs  method.rs  method_access_flags.rs  mutf8.rs  reference_kind.rs  version.rs
ristretto_classfile/src/attributes/: annotation.rs  annotation_element.rs  annotation_value_pair.rs  array_type.rs  attribute.rs  bootstrap_method.rs  code_exception.rs  exception_table_entry.rs  exports.rs  exports_flags.rs  inner_class.rs  instruction.rs  instruction_utils.rs  line_number.rs  local_variable_table.rs  local_variable_target.rs  local_variable_type_table.rs  max_locals.rs  max_stack.rs  method_parameter.rs  mod.rs  module_access_flags.rs  nested_class_access_flags.rs  offset_utils.rs  (+12 more)
ristretto_classfile/tests/: class_tests.rs  jar_tests.rs  java8_runtime_test.rs  verifier_tests.rs
ristretto_classloader/: CHANGELOG.md  Cargo.toml  README.md
ristretto_classloader/benches/: class_loader.rs  jimage.rs
ristretto_classloader/src/: class.rs  class_loader.rs  class_loader_type.rs  class_path.rs  class_path_entry.rs  concurrent_vec.rs  error.rs  field.rs  lib.rs  method.rs  module.rs  object.rs  reference.rs  runtime.rs  tls.rs  value.rs
ristretto_classloader/tests/: class_loader.rs  jimage.rs  module.rs  native.rs  runtime.rs  template.hbs
ristretto_cli/: CHANGELOG.md  Cargo.toml  README.md  artifacts.json  changelog.rss  index.html  oranda.json  ristretto_cli-installer.ps1.txt  ristretto_cli-installer.sh.txt
ristretto_cli/artifacts/: index.html
ristretto_cli/changelog/: index.html
ristretto_cli/src/: argument.rs  logging.rs  main.rs  module.rs  version.rs
ristretto_cli/tests/: compatibility.rs
ristretto_cli/wix/: main.wxs
ristretto_gc/: Cargo.toml  README.md
ristretto_gc/benches/: gc.rs
ristretto_gc/src/: collector.rs  config.rs  error.rs  finalizer.rs  gc.rs  gc_box.rs  lib.rs  metadata.rs  pointers.rs  root_guard.rs  sync.rs
ristretto_gc/tests/: collector.rs  concurrent.rs  cycles.rs  drop_mechanism.rs  error.rs  integration.rs  memory_leak_regression.rs  tracing.rs
ristretto_intrinsics/: Cargo.toml  README.md
ristretto_intrinsics/src/: async_fs.rs  bounds.rs  java.rs  jdk.rs  lib.rs  locale.rs  mod.rs  net_helpers.rs  properties.rs  test.rs
ristretto_jimage/: Cargo.toml  README.md
ristretto_jimage/benches/: jimage.rs
ristretto_jimage/src/: attribute.rs  byte_source.rs  error.rs  header.rs  image.rs  index.rs  lib.rs  resource.rs  test_utils.rs
ristretto_jit/: Cargo.toml  README.md
ristretto_jit/src/: compiler.rs  control_flow_graph.rs  error.rs  function.rs  jit_value.rs  lib.rs  local_type.rs  local_variables.rs  operand_stack.rs  runtime_helpers.rs  test.rs  value.rs  wasm_compiler.rs
ristretto_jit/tests/: compile_is_nan.rs  compile_max.rs  compile_multiply_high.rs  compiler.rs  double_is_nan.rs  dreturn.rs  float_is_nan.rs  freturn.rs  hash_code.rs  integration.rs  ireturn.rs  lreturn.rs  math_max.rs  math_multiply_high.rs  mod.rs  object_init.rs  return_constant.rs  return_parameter.rs  util.rs
ristretto_macros/: Cargo.toml  README.md
ristretto_macros/src/: async_method.rs  intrinsic.rs  intrinsic_registry.rs  lib.rs
ristretto_macros/tests/: proc_macros.rs
ristretto_pom/: Cargo.toml  README.md
ristretto_pom/src/: build.rs  dependency.rs  developer.rs  distribution.rs  error.rs  lib.rs  license.rs  organization.rs  profile.rs  project.rs  reporting.rs  repository.rs  scm.rs  types.rs  version.rs
ristretto_pom/tests/: builder_tests.rs  comprehensive_pom.rs  fixture_examples.rs  integration_valid.rs  round_trip_tests.rs  serde_tests.rs  type_conversion_tests.rs  validation_tests.rs
ristretto_test_util/: Cargo.toml
ristretto_test_util/src/: lib.rs  tempdir.rs
ristretto_types/: Cargo.toml  README.md
ristretto_types/src/: assignable.rs  error.rs  extensions.rs  frame.rs  handles.rs  java_error.rs  java_object.rs  lib.rs  module_access.rs  monitor.rs  native_memory.rs  parameters.rs  resource_manager.rs  rust_value.rs  test_utils.rs  thread.rs  vm.rs
ristretto_vm/: CHANGELOG.md  Cargo.toml  README.md
ristretto_vm/benches/: vm.rs
ristretto_vm/src/: arguments.rs  assignable.rs  call_site_cache.rs  call_stack.rs  configuration.rs  error.rs  frame.rs  handle.rs  handles.rs  instruction.rs  java_error.rs  java_object.rs  jit.rs  jit_runtime_helpers.rs  lib.rs  local_variables.rs  method_ref_cache.rs  module_system.rs  monitor.rs  operand_stack.rs  parameters.rs  rust_value.rs  startup_trace.rs  string_pool.rs  test.rs  thread.rs  vm.rs
ristretto_vm/tests/: compatibility.rs  enumeration.rs  expressions.rs  gc.rs  gc_memory_leak.rs  hello_world.rs  jdbc.rs  simple.rs
(+3036 files in other folders)
