[workspace]
default-members = [
    "ristretto_classfile",
    "ristretto_classloader",
    "ristretto_cli",
    "ristretto_gc",
    "ristretto_intrinsics",
    "ristretto_jit",
    "ristretto_jimage",
    "ristretto_macros",
    "ristretto_pom",
    "ristretto_types",
    "ristretto_vm",
]
members = [
    "examples/*",
    "ristretto_classfile",
    "ristretto_classloader",
    "ristretto_cli",
    "ristretto_gc",
    "ristretto_intrinsics",
    "ristretto_jimage",
    "ristretto_jit",
    "ristretto_macros",
    "ristretto_pom",
    "ristretto_types",
    "ristretto_vm",
]
resolver = "3"

[workspace.package]
authors = ["Brian Heineman <brian.heineman@gmail.com>"]
categories = ["development-tools"]
edition = "2024"
keywords = ["java", "jvm"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/theseus-rs/ristretto"
rust-version = "1.92.0"
version = "0.29.0"

[workspace.lints.rust]
dead_code = "allow"
missing_debug_implementations = "deny"
unsafe_code = "deny"
warnings = "deny"

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
allow_attributes = "deny"
fallible_impl_from = "deny"
unwrap_used = "deny"
large_stack_arrays = "allow"
result_large_err = "allow"

[workspace.dependencies]
ahash = "0.8.12"
anstyle = "1.0.13"
anyhow = "1.0.101"
async-recursion = "1.1.1"
bitflags = "2.10.0"
bytemuck = "1.25.0"
byteorder = "1.5.0"
byte-unit = "5.2.0"
clap = "4.5.57"
console = "0.16.2"
cranelift = "0.128.3"
criterion = { version = "0.8.2", default-features = false }
dashmap = "6.1.0"
dirs = "6.0.0"
filetime = "0.2.27"
flate2 = "1.1.9"
getrandom = "0.3.4"
indoc = "2.0.7"
indexmap = "2.13.0"
jiff = "0.2.19"
memchr = "2.8.0"
memmap2 = "0.9.9"
os_info = "3.14.0"
parking_lot = "0.12.5"
phf = "0.13.1"
phf_codegen = "0.13.1"
proc-macro2 = "1.0.106"
quick-xml = "0.39.0"
quote = "1.0.44"
rayon = "1.11.0"
regex = "1.12.3"
reqwest = "0.13.2"
serde = "1.0.228"
serde_plain = "1.0.2"
stacker = "0.1.23"
syn = "2.0.114"
sysinfo = "0.38.1"
sys-locale = "0.3.2"
tar = "0.4.44"
tempfile = "3.24.0"
test-log = "0.2.19"
thiserror = "2.0.18"
thread-priority = "3.0.0"
tokio = { version = "1.49.0", default-features = false, features = ["macros", "rt", "sync"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
walkdir = "2.5.0"
wasm-bindgen-futures = "0.4.58"
whoami = "2.1.0"
zerocopy = "0.8.39"
zip = { version = "7.4.0", default-features = false }

[workspace.metadata.release]
shared-version = true
dependent-version = "upgrade"
tag-name = "v{{version}}"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
