[workspace]
default-members = [
    "ristretto_classfile",
    "ristretto_classloader",
    "ristretto_cli",
    "ristretto_gc",
    "ristretto_intrinsics",
    "ristretto_jit",
    "ristretto_jimage",
    "ristretto_macros",
    "ristretto_pom",
    "ristretto_types",
    "ristretto_vm",
]
members = [
    "examples/*",
    "ristretto_classfile",
    "ristretto_classloader",
    "ristretto_cli",
    "ristretto_gc",
    "ristretto_intrinsics",
    "ristretto_jimage",
    "ristretto_jit",
    "ristretto_macros",
    "ristretto_pom",
    "ristretto_types",
    "ristretto_vm",
]
resolver = "3"

[workspace.package]
authors = ["Brian Heineman <brian.heineman@gmail.com>"]
categories = ["development-tools"]
edition = "2024"
keywords = ["java", "jvm"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/theseus-rs/ristretto"
rust-version = "1.94.0"
version = "0.30.0"

[workspace.lints.rust]
dead_code = "allow"
missing_debug_implementations = "deny"
unsafe_code = "deny"
warnings = "deny"

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
allow_attributes = "deny"
fallible_impl_from = "deny"
unwrap_used = "deny"
large_stack_arrays = "allow"
result_large_err = "allow"

[workspace.dependencies]
ahash = "0.8.12"
anstyle = "1.0.14"
anyhow = "1.0.102"
async-recursion = "1.1.1"
bitflags = "2.11.1"
bytemuck = "1.25.0"
byteorder = "1.5.0"
byte-unit = "5.2.0"
clap = "4.6.1"
console = "0.16.3"
core-foundation-sys = "0.8.7"
cranelift = "0.131.0"
criterion = { version = "0.8.2", default-features = false }
dashmap = "6.1.0"
dirs = "6.0.0"
filetime = "0.2.27"
flate2 = "1.1.9"
getrandom = { version = "0.3.4", features = ["wasm_js"] }
hashbrown = { version = "0.17.0", features = ["equivalent"] }
indoc = "2.0.7"
indexmap = "2.14.0"
jiff = "0.2.24"
libc = "0.2.182"
memchr = "2.8.0"
memmap2 = "0.9.10"
os_info = "3.14.0"
os_pipe = "1.2.3"
parking_lot = "0.12.5"
phf = "0.13.1"
phf_codegen = "0.13.1"
proc-macro2 = "1.0.106"
quick-xml = "0.39.2"
quote = "1.0.45"
rayon = "1.12.0"
regex = "1.12.3"
reqwest = "0.13.2"
serde = "1.0.228"
serde_plain = "1.0.2"
socket2 = "0.6.3"
stacker = "0.1.24"
syn = "2.0.117"
sysinfo = "0.38.4"
sys-locale = "0.3.2"
tar = "0.4.45"
tempfile = "3.27.0"
test-log = "0.2.20"
thiserror = "2.0.18"
thread-priority = "3.0.0"
tokio = { version = "1.52.1", default-features = false, features = ["macros", "rt", "sync", "time"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
walkdir = "2.5.0"
wasm-bindgen-futures = "0.4.68"
whoami = "2.1.1"
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_System_Console", "Win32_System_Registry", "Win32_Security"] }
zerocopy = "0.8.47"
zip = { version = "8.5.1", default-features = false }

[workspace.metadata.release]
shared-version = true
dependent-version = "upgrade"
tag-name = "v{{version}}"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"

[profile.release-tests]
inherits = "release"
debug-assertions = true

[profile.dist]
inherits = "release"
