[workspace]
default-members = [
    "ristretto_classfile",
    "ristretto_classloader",
    "ristretto_gc",
    "ristretto_intrinsics",
    "ristretto_java",
    "ristretto_jit",
    "ristretto_jimage",
    "ristretto_macros",
    "ristretto_pom",
    "ristretto_types",
    "ristretto_vm",
]
members = [
    "examples/*",
    "ristretto_classfile",
    "ristretto_classloader",
    "ristretto_gc",
    "ristretto_intrinsics",
    "ristretto_jimage",
    "ristretto_java",
    "ristretto_jit",
    "ristretto_macros",
    "ristretto_pom",
    "ristretto_test_util",
    "ristretto_types",
    "ristretto_vm",
]
resolver = "3"

[workspace.package]
authors = ["Brian Heineman <brian.heineman@gmail.com>"]
categories = ["development-tools"]
edition = "2024"
keywords = ["java", "jvm"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/theseus-rs/ristretto"
rust-version = "1.97.1"
version = "0.31.0"

[workspace.lints.rust]
dead_code = "allow"
missing_debug_implementations = "deny"
unsafe_code = "deny"
unexpected_cfgs = { level = "deny", check-cfg = ["cfg(coverage)"] }
unused_qualifications = "deny"
warnings = "deny"

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
allow_attributes = "deny"
expect_used = "deny"
fallible_impl_from = "deny"
indexing_slicing = "deny"
large_stack_arrays = "allow"
mod_module_files = "deny"
panic = "deny"
panic_in_result_fn = "deny"
result_large_err = "allow"
todo = "deny"
unreachable = "deny"
unimplemented = "deny"
unwrap_in_result = "deny"
unwrap_used = "deny"

[workspace.dependencies]
ahash = "0.8.12"
anstyle = "1.0.14"
anyhow = "1.0.104"
async-recursion = "1.1.1"
bitflags = "2.13.1"
bytemuck = "1.25.2"
byteorder = "1.5.0"
byte-unit = "5.2.5"
clap = "4.6.4"
console = "0.16.4"
core-foundation-sys = "0.8.7"
coreaudio-sys = { version = "0.2.18", features = ["audio_unit"] }
cpal = "0.18.1"
cranelift = "0.134.2"
criterion = { version = "0.8.2", default-features = false }
dashmap = "6.2.1"
dirs = "6.0.0"
filetime = "0.2.29"
flate2 = "1.1.9"
getrandom = { version = "0.3.4", features = ["wasm_js"] }
hashbrown = { version = "0.17.1", features = ["equivalent"] }
indoc = "2.0.7"
indexmap = "2.14.0"
jiff = "0.2.34"
libc = "0.2.189"
libloading = "0.9.0"
memchr = "2.8.3"
memmap2 = "0.9.11"
midir = "0.11.0"
os_info = "3.15.0"
os_pipe = "1.2.3"
parking_lot = "0.12.5"
proc-macro2 = "1.0.107"
quick-xml = "0.41.0"
quote = "1.0.47"
rayon = "1.12.0"
regex = "1.13.1"
reqwest = { version = "0.13.4", default-features = false }
rustls = { version = "0.23.41", default-features = false }
serde = "1.0.229"
serde_json = "1.0.151"
socket2 = "0.6.5"
stacker = "0.1.24"
syn = "3.0.3"
sysinfo = "0.39.6"
sys-locale = "0.3.2"
tar = "0.4.46"
tempfile = "3.27.0"
test-log = "0.2.21"
ristretto_test_util = { path = "ristretto_test_util", version = "0.31.0" }
thiserror = "2.0.19"
thread-priority = "3.1.1"
tokio = { version = "1.53.1", default-features = false, features = ["macros", "rt", "sync", "time"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
walkdir = "2.5.0"
wasm-bindgen-futures = "0.4.76"
whoami = "2.1.2"
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_Console", "Win32_System_Registry", "Win32_Security"] }
wstd = "0.6.7"
zerocopy = "0.8.55"
zip = { version = "8.6.0", default-features = false }

[workspace.metadata.release]
shared-version = true
dependent-version = "upgrade"
tag-name = "v{{version}}"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"

[profile.release-tests]
inherits = "release"
debug-assertions = true

[profile.dist]
inherits = "release"
