[package]
authors.workspace = true
categories.workspace = true
description = "A library for reading, writing and verifying Java classfiles."
edition.workspace = true
keywords = ["java", "jvm", "classfile", "bytecode"]
license.workspace = true
name = "ristretto_classfile"
repository.workspace = true
version.workspace = true

[dependencies]
bitflags = { workspace = true }
byteorder = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
flate2 = { workspace = true }
reqwest = { workspace = true }
tar = { workspace = true }
tokio = { workspace = true, features = ["full"] }
zip = { workspace = true }

[[bench]]
harness = false
name = "classfile"
