[package]
authors.workspace = true
categories.workspace = true
description = "A library for reading, writing and verifying Java classfiles."
edition.workspace = true
keywords = ["java", "jvm", "classfile", "bytecode"]
license.workspace = true
name = "ristretto_classfile"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
bitflags = { workspace = true }
byteorder = { workspace = true }
indexmap = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
criterion = { workspace = true }
flate2 = { workspace = true }
indoc = { workspace = true }
reqwest = { workspace = true, features = ["rustls-tls-native-roots"] }
tar = { workspace = true }
tokio = { workspace = true }
zip = { workspace = true, features = ["deflate"] }

[[bench]]
harness = false
name = "class_file"
