[package]
authors.workspace = true
categories.workspace = true
description = "A library for loading Java classes."
edition.workspace = true
keywords = ["java", "jvm", "classloader", "class"]
license.workspace = true
name = "ristretto_classloader"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
flate2 = { workspace = true }
indexmap = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
ristretto_classfile = { path = "../ristretto_classfile", version = "0.23.0" }
ristretto_gc = { path = "../ristretto_gc", version = "0.23.0" }
serde = { workspace = true, features = ["derive"] }
serde_plain = { workspace = true }
tar = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
walkdir = { workspace = true }
zerocopy = { workspace = true }
zip = { workspace = true }

[target.'cfg(target_family = "wasm")'.dependencies]
tokio = { workspace = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { workspace = true, features = ["fs"] }

[dev-dependencies]
criterion = { workspace = true }
indoc = { workspace = true }

[target.'cfg(target_family = "wasm")'.dev-dependencies]
tokio = { workspace = true }

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread"] }

[features]
default = ["rustls-tls"]
native-tls = [
    "reqwest/native-tls",
]
rustls-tls = [
    "reqwest/rustls-tls-native-roots",
]
url = []

[[bench]]
harness = false
name = "class_loader"
