[package]
authors.workspace = true
categories.workspace = true
description = "JVM Garbage Collector"
edition.workspace = true
keywords = ["java", "jvm", "gc"]
license.workspace = true
name = "ristretto_gc"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
dashmap = { workspace = true, features = ["rayon"] }
rayon = { workspace = true }
parking_lot = { workspace = true }
sysinfo = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
test-log = { workspace = true, features = ["trace"] }

[[bench]]
harness = false
name = "gc"
