[package]
authors.workspace = true
categories.workspace = true
description = "Intrinsic methods for the Ristretto JVM"
edition.workspace = true
keywords = ["java", "jvm"]
license.workspace = true
name = "ristretto_intrinsics"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
name = "ristretto_intrinsics"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
ahash = { workspace = true }
async-recursion = { workspace = true }
bitflags = { workspace = true }
byteorder = { workspace = true }
flate2 = { workspace = true }
getrandom = { workspace = true }
jiff = { workspace = true }
parking_lot = { workspace = true }
ristretto_classfile = { path = "../ristretto_classfile", version = "0.30.0" }
ristretto_classloader = { path = "../ristretto_classloader", version = "0.30.0" }
ristretto_gc = { path = "../ristretto_gc", version = "0.30.0" }
ristretto_macros = { path = "../ristretto_macros", version = "0.30.0" }
ristretto_types = { path = "../ristretto_types", version = "0.30.0" }
sys-locale = { workspace = true }
tracing = { workspace = true }
zerocopy = { workspace = true }
zip = { workspace = true, features = ["deflate"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
console = { workspace = true }
dirs = { workspace = true }
filetime = { workspace = true }
libc = { workspace = true }
os_info = { workspace = true }
socket2 = { workspace = true }
sysinfo = { workspace = true }
thread-priority = { workspace = true }
tokio = { workspace = true, features = ["fs", "net", "process", "time"] }
whoami = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation-sys = { workspace = true }

[target.'cfg(target_family = "windows")'.dependencies]
os_pipe = { workspace = true }
windows-sys = { workspace = true, features = ["Win32_Globalization"] }

[target.'cfg(target_family = "wasm")'.dependencies]
tokio = { workspace = true }

[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies]
wasm-bindgen-futures = { workspace = true }

[dev-dependencies]
ristretto_test_util = { workspace = true }
ristretto_vm = { path = "../ristretto_vm", version = "0.30.0" }
tempfile = { workspace = true }

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread"] }

[package.metadata.cargo-machete]
ignored = [
    # used by async functions in proc macros
    "async-recursion",
]
