[package]
authors.workspace = true
categories.workspace = true
description = "JVM JImage Reader"
edition.workspace = true
keywords = ["java", "jimage"]
license.workspace = true
name = "ristretto_jimage"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
byteorder = { workspace = true }
memchr = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
memmap2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
