[package]
authors.workspace = true
categories.workspace = true
description = "JVM JIT Compiler"
edition.workspace = true
keywords = ["java", "jvm", "jit"]
license.workspace = true
name = "ristretto_jit"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
ahash = { workspace = true }
ristretto_classfile = { path = "../ristretto_classfile", version = "0.27.0" }
thiserror = { workspace = true }
zerocopy = { workspace = true }

[target.'cfg(target_family = "wasm")'.dependencies]
cranelift = { workspace = true, features = ["module", "native"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
cranelift = { workspace = true, features = ["jit", "module", "native"] }

[dev-dependencies]
indexmap = { workspace = true }
