[package]
authors.workspace = true
categories.workspace = true
description = "Ristretto Macros for Java Virtual Machine"
edition.workspace = true
keywords = ["java", "jvm", "macros"]
license.workspace = true
name = "ristretto_macros"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
ahash = { workspace = true }
phf_codegen = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
ristretto_classfile = { path = "../ristretto_classfile", version = "0.29.0" }
syn = { workspace = true, features = ["full", "extra-traits"] }
walkdir = { workspace = true }
